feat: Update Docker configuration and enhance database management
- Updated Docker Compose configuration to use PostgreSQL 16 and improved health checks for the database service.
- Added new entries to .gitignore for H2 and PostgreSQL database files.
- Introduced Maven Wrapper scripts for easier project setup and management.
- Updated README.md and frontend documentation to reflect changes in API endpoints for transaction summaries.
- Removed outdated H2 database files and configuration, transitioning to PostgreSQL for production.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -90,6 +90,13 @@
             <name>tenant-management-java:${project.version}</name>
           </image>
         </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
