refactor: Rename project directory and update Docker image name
- Changed project directory name from 'tenant-management-java' to 'tenant-management-java-app' for clarity.
- Updated Docker image name in pom.xml to reflect the new project directory name.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -87,7 +87,7 @@
         <version>3.3.4</version>
         <configuration>
           <image>
-            <name>tenant-management-java:${project.version}</name>
+            <name>tenant-management-java-app:${project.version}</name>
           </image>
         </configuration>
         <executions>
