--- a/backend-mcp-uv/pyproject.toml
+++ b/backend-mcp-uv/pyproject.toml
@@ -31,6 +31,8 @@ dev = [
 [tool.ruff]
 target-version = "py311"
 line-length = 100
+
+[tool.ruff.lint]
 select = ["E", "F", "I", "W"]
 
 [tool.pytest.ini_options]
